# detsi-vocabs

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  agents.ttl  catalogue.ttl  docker-compose.yml  labels.ttl  manifest.ttl  staticwebapp.config.json
.devcontainer/: devcontainer.json
.github/act/: release-event.json
.github/workflows/: release.yml
docker/: Dockerfile.fuseki  Dockerfile.prez-ui  config.ttl  docker-compose.yml
prez/: .funcignore  .gitignore  README.md  Taskfile.yml  function_app.py  local.settings.json  patched_asgi_function_wrapper.py  pyproject.toml  requirements.txt
prez-ui-docker/: Dockerfile
vocabs/: DataCite-resourceTypes.ttl  LanguageCode.ttl  MD_MaintenanceFrequencyCode.ttl  MD_ProgressCode.ttl  MD_SpatialRepresentationTypeCode.ttl  dataset-relationships.ttl  dq-iso-19157.ttl  dq-iso-25012.ttl  dq-nsw-data-quality-assessment.ttl  europa-file-types.ttl  ga_service-type_v1-1.ttl  gcmd-horizontalresolutionrange.ttl  gcmd-sciencekeywords.ttl  gcmd-temporalresolutionrange.ttl  gsq-roles.ttl  iso639-language-code.ttl  qesd-obs-props.ttl  qesd-qkd.ttl  qesd-quantitykind.ttl  qesd-unitofmeasure.ttl  qg-agent.ttl  qg-security-classification.ttl  qld-crs.ttl  qld-data-licenses.ttl  resource-types.ttl
